--- a/ExamenT1.html
+++ b/ExamenT1.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen Trimestre 1</title>
     <link
-     rel="stylesheet" href="styleExamenT1.css"/>
+     rel="stylesheet" href="./styleExamenT1.css"/>
 </head>
 <body>
     <div class="div">
         <div class="cambio">
             <div class="cara">
-                <img src="C:/Users/1DAM&&1DAW/Desktop/Examen%20Lenguaje%20de%20marcas%20T1/ImagenExamen.webp" alt="Aquí va una imagen">
+                <img src="./ImagenExamen.webp" alt="Aquí va una imagen">
             </div>
             <div class="texto">
                 <p>Javi te desea...</p>
